test/sc++/error/head-tail-no-edges.scpp
../../scc/error/head-tail-no-edges.sc